# dynamic-systems-dsl-engine

./: CMakeLists.txt  ChartPoints.h  DormandPrinceMethod.cpp  DormandPrinceMethod.h  EulersMethod.cpp  EulersMethod.h  ExportUtils.cpp  ExportUtils.h  Extrapolation.cpp  Extrapolation.h  FirstDerivative.cpp  FirstDerivative.h  FirstDerivative2D.cpp  FirstDerivative2D.h  FirstDerivativeX.cpp  FirstDerivativeX.h  FirstDerivativeY.cpp  FirstDerivativeY.h  FirstDerivativeZ.cpp  FirstDerivativeZ.h  FunctionParser.cpp  FunctionParser.h  HeunsMethod.cpp  HeunsMethod.h  InitialData.cpp  InitialData.h  NumericalMethod.h  PointsTable.cpp  PointsTable.h  Portrait.cpp  Portrait.h  ProgramExecutor.cpp  ProgramExecutor.h  Result.cpp  Result.h  RungeKuttaMethod.cpp  RungeKuttaMethod.h  SimpsonsMethod.cpp  SimpsonsMethod.h  build.sh  (+11 more)
resources/: amcharts.editor.html  amcharts.footer.html  amcharts.header.html  phase.footer.html  phase.header.html
